Fix paddings on smaller screens

--- a/wp-content/themes/instasistas/static/scss/app.scss
+++ b/wp-content/themes/instasistas/static/scss/app.scss
@@ -18,6 +18,7 @@ $gold: #c0b283;
 
 $main-font-family: 'Open Sans', sans-serif;
 $section-border: 1px solid $gold;
+$small-margin: 3rem;
 $large-margin: 6rem;
 $lr-padding: 1rem;
 $sm-breakpoint: 768px;
