--- a/wp-content/themes/instasistas/static/scss/partials/_header.scss
+++ b/wp-content/themes/instasistas/static/scss/partials/_header.scss
@@ -1,4 +1,7 @@
 .header {
+  padding-top: 2.5rem;
+  padding-bottom: 2.5rem;
+
   @media (min-width: $sm-breakpoint) {
     display: flex;
   }
