--- a/wp-content/themes/instasistas/static/scss/partials/_home.scss
+++ b/wp-content/themes/instasistas/static/scss/partials/_home.scss
@@ -5,7 +5,5 @@
   background-size: cover;
   background-position: center;
   background-repeat: no-repeat;
-  margin: 0;
-  padding: 3rem 1rem;
-  min-height: 100vh;
+  min-height: 90vh;
 }
